--- a/src/com/ats/gui/renderer/GenymotionRunningInstanceRenderer.mxml
+++ b/src/com/ats/gui/renderer/GenymotionRunningInstanceRenderer.mxml
@@ -1,47 +1,56 @@
 <?xml version="1.0"?>
 <renderer:SimulatorRenderer
-        xmlns:fx="http://ns.adobe.com/mxml/2009"
-        xmlns:renderer="com.ats.gui.renderer.*"
-        xmlns:s="library://ns.adobe.com/flex/spark"
-        creationComplete="creationCompleteHandler(event)"
-		autoDrawBackground="false" height="20">
-
-    <fx:Script>
-        <![CDATA[
-        import com.ats.device.simulator.GenymotionSimulator;
-
-        import flash.filters.BitmapFilterQuality;
-
-        import mx.events.FlexEvent;
-
-        import spark.filters.DropShadowFilter;
-
-        public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
-
-        private function creationCompleteHandler(event:FlexEvent):void {}
-
-        private function stopButton_clickHandler(event:MouseEvent):void {
-            (data as GenymotionSimulator).stop()
-        }
-
-        ]]>
-    </fx:Script>
-
-    <s:HGroup id="mainGroup" width="100%" verticalAlign="middle" verticalCenter="0" enabled="{data.status!='loading'}"
-              paddingRight="10" paddingLeft="32" filters="{dropShadowFilterMiddle}">
-        <s:HGroup id="firstGroup" verticalAlign="middle" buttonMode="true">
-            <s:BitmapImage id="osBitmap" left="6" smooth="true" smoothingQuality="high" source="assets/icons/16/bullet_blue.png"/>
-            <s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
-                <s:Label text="{data.name}" maxWidth="234" maxDisplayedLines="1"/>
-            </s:VGroup>
-        </s:HGroup>
-
-        <s:Spacer width="100%"/>
-
-        <s:Group buttonMode="true" click="stopButton_clickHandler(event)" height="16" width="16"
-				 toolTip="Stop running instance">
-            <s:BitmapImage id="iconStatus" source="assets/icons/16/stop.png" smooth="true" smoothingQuality="high"/>
-        </s:Group>
-    </s:HGroup>
-
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:renderer="com.ats.gui.renderer.*"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	creationComplete="creationCompleteHandler(event)"
+	autoDrawBackground="false" right="1" left="1" height="20"
+	rollOut="rollOutHandler(event)" rollOver="rollOverHandler(event)">
+	
+	<fx:Script>
+		<![CDATA[
+			import com.ats.device.simulator.GenymotionSimulator;
+			
+			import flash.filters.BitmapFilterQuality;
+			
+			import mx.events.FlexEvent;
+			
+			import spark.filters.DropShadowFilter;
+			
+			public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
+			
+			private function creationCompleteHandler(event:FlexEvent):void {}
+			
+			private function stopButton_clickHandler(event:MouseEvent):void {
+				(data as GenymotionSimulator).stop()
+			}
+			
+			protected function rollOutHandler(event:MouseEvent):void
+			{
+				stopButton.visible = false;
+			}
+			
+			protected function rollOverHandler(event:MouseEvent):void
+			{
+				stopButton.visible = true;
+			}
+			
+		]]>
+	</fx:Script>
+	
+	<s:HGroup id="mainGroup" width="100%" verticalAlign="middle" verticalCenter="0" enabled="{data.state==GenymotionSimulator.STATE_ONLINE}"
+			  paddingRight="10" paddingLeft="36" filters="{dropShadowFilterMiddle}">
+<!--		<s:HGroup id="firstGroup" verticalAlign="middle" buttonMode="true">
+			<s:BitmapImage id="osBitmap" left="6" smooth="true" smoothingQuality="high" source="assets/icons/16/bullet_blue.png"/>
+			<s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
+				<s:Label text="- Instance #{data.instanceNumber}" maxWidth="234" maxDisplayedLines="1"/>
+			</s:VGroup>
+		</s:HGroup>-->
+		<s:Label text="- Instance #{data.instanceNumber}" maxWidth="234" maxDisplayedLines="1"/>
+		<s:Group id="stopButton" buttonMode="true" click="stopButton_clickHandler(event)" height="16" width="16"
+				 toolTip="Stop running instance" visible="false">
+			<s:BitmapImage id="iconStatus" source="assets/icons/16/stop.png" smooth="true" smoothingQuality="high"/>
+		</s:Group>
+	</s:HGroup>
+	
 </renderer:SimulatorRenderer>
