--- a/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
+++ b/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
@@ -10,72 +10,72 @@
 	
 	<fx:Script>
 		<![CDATA[
-        import com.ats.device.simulator.GenymotionRecipe;
-        import com.ats.device.simulator.GenymotionRecipe;
-        import com.ats.device.simulator.GenymotionRecipe;
-        import com.ats.device.simulator.GenymotionRecipe;
-        import com.ats.device.simulator.Simulator;
-        import com.greensock.TweenMax;
+		import com.ats.device.simulator.genymotion.GenymotionRecipe;
+		import com.ats.device.simulator.genymotion.GenymotionRecipe;
+		import com.ats.device.simulator.genymotion.GenymotionRecipe;
+		import com.ats.device.simulator.genymotion.GenymotionRecipe;
+		import com.ats.device.simulator.Simulator;
+		import com.greensock.TweenMax;
 
-        import flash.filters.BitmapFilterQuality;
+		import flash.filters.BitmapFilterQuality;
 
-        import mx.collections.ArrayCollection;
-        import mx.events.CollectionEvent;
-        import mx.events.FlexEvent;
+		import mx.collections.ArrayCollection;
+		import mx.events.CollectionEvent;
+		import mx.events.FlexEvent;
 
-        import spark.filters.ColorMatrixFilter;
-        import spark.filters.DropShadowFilter;
+		import spark.filters.ColorMatrixFilter;
+		import spark.filters.DropShadowFilter;
 
-        public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
-        private static const greyFilter:ColorMatrixFilter = new ColorMatrixFilter([0.3, 0.59, 0.11, 0, 0, 0.3, 0.59, 0.11, 0, 0, 0.3, 0.59, 0.11, 0, 0, 0, 0, 0, 1, 0])
+		public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
+		private static const greyFilter:ColorMatrixFilter = new ColorMatrixFilter([0.3, 0.59, 0.11, 0, 0, 0.3, 0.59, 0.11, 0, 0, 0.3, 0.59, 0.11, 0, 0, 0, 0, 0, 1, 0])
 
-        override public function set data(value:Object):void {
-            if (super.data == null || super.data != value) {
-                super.data = value;
-                dispatchEvent(new Event("updateDataEvent"))
-            }
-        }
+		override public function set data(value:Object):void {
+			if (super.data == null || super.data != value) {
+				super.data = value;
+				dispatchEvent(new Event("updateDataEvent"))
+			}
+		}
 
-        [Bindable(event="updateDataEvent")]
-        public function get sim():Simulator {
-            return data as Simulator
-        }
+		[Bindable(event="updateDataEvent")]
+		public function get sim():Simulator {
+			return data as Simulator
+		}
 
 
-        protected function startStopButton_clickHandler(event:MouseEvent):void {
-            (data as GenymotionRecipe).startInstance()
-        }
+		protected function startStopButton_clickHandler(event:MouseEvent):void {
+			(data as GenymotionRecipe).startInstance()
+		}
 
-        protected function removedFromStageHandler(event:Event):void {
-            mainGroup.filters = []
-        }
+		protected function removedFromStageHandler(event:Event):void {
+			mainGroup.filters = []
+		}
 
-        protected function creationCompleteHandler(event:FlexEvent):void {
-            (data as GenymotionRecipe).instances.addEventListener(CollectionEvent.COLLECTION_CHANGE, collectionChangeHandler);
-            height = 40 + (data as GenymotionRecipe).instances.length * 20
-        }
+		protected function creationCompleteHandler(event:FlexEvent):void {
+			(data as GenymotionRecipe).instances.addEventListener(CollectionEvent.COLLECTION_CHANGE, collectionChangeHandler);
+			height = 40 + (data as GenymotionRecipe).instances.length * 20
+		}
 
-        private function collectionChangeHandler(event:CollectionEvent):void {
-            var collection:ArrayCollection = event.currentTarget as ArrayCollection
-            height = 40 + collection.length * 20
-        }
+		private function collectionChangeHandler(event:CollectionEvent):void {
+			var collection:ArrayCollection = event.currentTarget as ArrayCollection
+			height = 40 + collection.length * 20
+		}
 
-        protected function simulatorrenderer1_rollOverHandler(event:MouseEvent):void {
-            plusButton.visible = true;
-            if (selected) {
-                TweenMax.fromTo(plusButton, 0.3, {alpha: 0.5}, {alpha: 1.0})
-            }
-        }
+		protected function simulatorrenderer1_rollOverHandler(event:MouseEvent):void {
+			plusButton.visible = true;
+			if (selected) {
+				TweenMax.fromTo(plusButton, 0.3, {alpha: 0.5}, {alpha: 1.0})
+			}
+		}
 
-        protected function simulatorrenderer1_rollOutHandler(event:MouseEvent):void {
-            plusButton.visible = false;
-            plusButton.alpha = 0.5;
-        }
+		protected function simulatorrenderer1_rollOutHandler(event:MouseEvent):void {
+			plusButton.visible = false;
+			plusButton.alpha = 0.5;
+		}
 
-        protected function itemrenderer1_clickHandler(event:MouseEvent):void {
-            TweenMax.fromTo(plusButton, 0.3, {alpha: 0.5}, {alpha: 1.0})
-        }
-        ]]>
+		protected function itemrenderer1_clickHandler(event:MouseEvent):void {
+			TweenMax.fromTo(plusButton, 0.3, {alpha: 0.5}, {alpha: 1.0})
+		}
+		]]>
 	</fx:Script>
 	
 	<s:VGroup width="100%" verticalAlign="middle" paddingBottom="4">
