Add alert when user try to stop instance owned by other MS

--- a/src/com/ats/gui/renderer/GenymotionRunningInstanceRenderer.mxml
+++ b/src/com/ats/gui/renderer/GenymotionRunningInstanceRenderer.mxml
@@ -10,11 +10,14 @@
 	<fx:Script>
 		<![CDATA[
 		import com.ats.device.simulator.genymotion.GenymotionInstance;
-		import com.ats.device.simulator.genymotion.GenymotionInstance;
 
 		import flash.filters.BitmapFilterQuality;
 
+		import mx.events.CloseEvent;
+
 		import mx.events.FlexEvent;
+
+		import spark.components.Alert;
 
 		import spark.filters.DropShadowFilter;
 
@@ -24,7 +27,19 @@
 		}
 
 		private function stopButton_clickHandler(event:MouseEvent):void {
-			(data as GenymotionInstance).stop()
+			var instance:GenymotionInstance = (data as GenymotionInstance)
+			if (!instance.isMS) {
+				Alert.show("Are you sure you want to stop this instance", "Stop Genymotion instance", Alert.YES | Alert.NO, this, alertClickHandler)
+				return
+			}
+
+			instance.stop()
+		}
+
+		private function alertClickHandler(evt:CloseEvent):void {
+			if (evt.detail == Alert.YES) {
+				(data as GenymotionInstance).stop()
+			}
 		}
 
 		protected function rollOutHandler(event:MouseEvent):void {
@@ -37,14 +52,8 @@
 		]]>
 	</fx:Script>
 	<!-- enabled="{data.state==GenymotionInstance.STATE_ONLINE}" -->
-	<s:HGroup id="mainGroup" width="100%" verticalAlign="middle" verticalCenter="0" enabled="{data.enabled==true}"
+	<s:HGroup id="mainGroup" width="100%" verticalAlign="middle" verticalCenter="0" enabled="{data.enabled}"
 			  paddingRight="10" paddingLeft="36" filters="{dropShadowFilterMiddle}">
-<!--		<s:HGroup id="firstGroup" verticalAlign="middle" buttonMode="true">
-			<s:BitmapImage id="osBitmap" left="6" smooth="true" smoothingQuality="high" source="assets/icons/16/bullet_blue.png"/>
-			<s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
-				<s:Label text="- Instance #{data.instanceNumber}" maxWidth="234" maxDisplayedLines="1"/>
-			</s:VGroup>
-		</s:HGroup>-->
 		<s:Label text="- Instance #{data.instanceNumber} (MS:{data.mobileStationIndentifer})" maxWidth="234" maxDisplayedLines="1"/>
 		<s:Group id="stopButton" buttonMode="true" click="stopButton_clickHandler(event)" height="16" width="16"
 				 toolTip="Stop running instance" visible="false">
